# basic_render

./: README.md  basic_canvas.cxx  render_line_main.cxx  triangle_index_render.cxx  triangle_index_render.hxx
.github/workflows/: build.yml  cmake.yml  main.yml
render/: CMakeLists.txt  basic_canvas.hxx  canvas_main.cpp  gfx.cxx  gfx.hxx  render_line.cxx  render_line.hxx  triangle_index_main.cxx  triangle_index_render.cxx  triangle_index_render.hxx  triangle_interpolated.cxx  triangle_interpolated.hxx  triangle_interpolated_main.cxx  triangle_render.cxx  triangle_render.hxx  triangle_render_main.cxx
res/: interpolated.ppm  lines.ppm
